# fairness-audit-framework

./: .gitignore  CONTRIBUTING.md  README.md
.github/workflows/: ci.yml
dashboard/: .env.example  index.html  package.json  vite.config.js
dashboard/src/: App.jsx  api.js  styles.css
dashboard/src/components/: AuditSummaryCard.jsx  DomainTabs.jsx  MetricBar.jsx  MetricsPanel.jsx  RemediationPanel.jsx  SeverityBadge.jsx
engine/: conftest.py  pyproject.toml  requirements.txt
engine/fairaudit/: __init__.py  auditor.py  cli.py  datasets.py  gate.py  metrics.py  models.py  remediation.py  report.py  severity.py
engine/scripts/: generate_reports.py
engine/tests/: test_auditor.py  test_metrics.py  test_severity_and_gate.py
server/: .env.example  package.json
server/data/: content_moderation.json  hiring.json  index.json  lending.json
server/src/: index.js  pythonBridge.js
server/src/lib/: dataStore.js  gate.js
server/src/routes/: audits.js  gate.js
